--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Ranjith Reddy KV",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2"
   },
   "devDependencies": {
